# TESTFFP

./: CMakeLists.txt  LICENSE  README.en.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/livideo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/livideo/: App.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/livideo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
liPusher/: build.gradle
liPusher/src/androidTest/java/com/licht/lipusher/: ExampleInstrumentedTest.kt
liPusher/src/main/: AndroidManifest.xml
liPusher/src/main/cpp/: CMakeLists.txt  VideoTrack.cpp  VideoTrack.h  lipusher.cpp
liPusher/src/main/cpp/librtmp/: CMakeLists.txt  dh.h  handshake.h  hashswf.c  rtmp.c  rtmp_sys.h
liPusher/src/main/cpp/x264/include/: x264.h
liPusher/src/main/java/com/licht/lipusher/: LivePusher.java  LivePusherActivity.kt  NativeLib.kt
liPusher/src/main/java/com/licht/lipusher/meida/: AudioChannel.java  CameraHelper.java  VideoChannel.java
liPusher/src/main/res/layout/: activity_live_pusher.xml
liPusher/src/test/java/com/licht/lipusher/: ExampleUnitTest.kt
livideoplayer/: build.gradle
livideoplayer/src/androidTest/java/com/licht/livideoplayer/: ExampleInstrumentedTest.kt
livideoplayer/src/main/: AndroidManifest.xml
livideoplayer/src/main/java/com/licht/livideoplayer/: LiPlayer.kt  TestActivity.kt
livideoplayer/src/main/res/layout/: activity_test.xml
livideoplayer/src/test/java/com/licht/livideoplayer/: ExampleUnitTest.kt
opengles/: build.gradle
opengles/src/androidTest/java/com/example/opengles/: ExampleInstrumentedTest.java
opengles/src/main/: AndroidManifest.xml
opengles/src/main/java/com/example/opengles/: Audio.kt  AudioToolsHelper.kt  EGLActivity.kt  EGLRender.java  ToolsActivity.java
opengles/src/main/res/layout/: activity_eglactivity.xml  activity_tools.xml
source/: build_android.sh  build_fdk_aac_android.sh  build_lame_android.sh  build_x264_android.sh
source/ffmpeg/: CMakeLists.txt  fmain.cpp
source/opengles/: AudioEncoderJni.cpp  CMakeLists.txt  EsUtil.cpp  openglesx.cpp
source/opengles/audio/: AudioEncoder.cpp  AudioEncoder.h
source/opengles/include/: EsUtil.h
source/player/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  LiFFmpeg.cpp  LiFFmpeg.h  VideoChannel.cpp  VideoChannel.h  livideoplayer.cpp  macro.h  queen.h  safe_queen.cpp  safe_queen.h
